// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tools suits should create standard HTML AST 1`] = `
Object {
  "body": Array [
    Object {
      "attributes": Object {
        "crossorigin": "anonymous",
        "src": "https://lib.baomitu.com/react-dom/16.10.1/umd/react.development.js",
        "type": "text/javascript",
      },
      "closeTag": true,
      "tagName": "script",
    },
    Object {
      "attributes": Object {
        "crossorigin": "anonymous",
        "integrity": "sha384-fYxN7HsDOBRo1wT/NSZ0LkoNlcXvpDpFy6WzB42LxuKAX7sBwgo7vuins+E1HCaw",
        "src": "https://cdn.bootcss.com/moment.js/2.22.1/moment.min.js",
        "type": "text/javascript",
      },
      "closeTag": true,
      "tagName": "script",
    },
  ],
  "head": Array [],
}
`;

exports[`tools suits should parse standard externals definition 1`] = `
Object {
  "moment": Array [
    Object {
      "url": "https://cdn.bootcss.com/moment.js/2.22.1/moment.js",
    },
    Object {
      "url": "https://cdn.bootcss.com/moment.js/2.22.1/locale/zh-cn.js",
    },
  ],
  "react": Array [
    Object {
      "url": "https://lib.baomitu.com/react-dom/16.10.1/umd/react-dom.development.js",
    },
  ],
  "web-animations-js": Array [
    Object {
      "url": "https://unpkg.com/web-animations-js@2.3.1/web-animations.min.js",
    },
  ],
}
`;

exports[`tools suits should parse standard externals definition 2`] = `
Object {
  "moment": Array [
    Object {
      "integrity": "sha384-fYxN7HsDOBRo1wT/NSZ0LkoNlcXvpDpFy6WzB42LxuKAX7sBwgo7vuins+E1HCaw",
      "url": "https://cdn.bootcss.com/moment.js/2.22.1/moment.min.js",
    },
    Object {
      "integrity": "sha384-XjUTsP+pYBX4Kwg40gPvhWcRGKZh9gUpDForgg5bwsnyNU+VabKhRX6XkyM6fLk4",
      "url": "https://cdn.bootcss.com/moment.js/2.22.1/locale/zh-cn.js",
    },
  ],
  "react": Array [
    Object {
      "integrity": "sha384-s+4sCJEFimwQu2safB6vclCnbG1xrLnO3YaCIFfqQah5bdnJm9w2su1pT0TQltwW",
      "url": "https://cdn.bootcss.com/react/16.3.2/umd/react.production.min.js",
    },
  ],
  "web-animations-js": Array [
    Object {
      "url": "https://unpkg.com/web-animations-js@2.3.1/web-animations.min.js",
    },
  ],
}
`;
